# facil-websocket-wrapper

./: .gitignore  CMakeLists.txt  README.md  install_facil.sh
include/: websocketwrapper.hpp
src/: main.cpp  websocketwrapper.cpp
